# v2t_voice_activation

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
docs/: index.md
v2t_voice_activation/: __init__.py  audio_processing.py  auto_transcription.py  keyword_detection.py  transcription_service.py
