[tool.poetry]
name = "v2t_voice_activation"
version = "0.1.0"
description = "A Python library for voice-activated transcription using Groq API and Porcupine wake-word detection"
authors = ["Mikhail Ostrovsky <oty998@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/oty-v/v2t_voice_activation"
repository = "https://github.com/oty-v/v2t_voice_activation"
documentation = "https://github.com/oty-v/v2t_voice_activation"

[tool.poetry.dependencies]
python = "^3.8"
pyaudio = "^0.2.11"
numpy = "^1.24.0"
pydub = "^0.25.1"
groq = "^1.0.0"
pvporcupine = "^1.9.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
black = "^23.3.0"
flake8 = "^5.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
